# ai-agent

./: CLAUDE.md
ai-agent-api/: .api.pid  .env.example  .env.tokens  .gitignore  .test_token  CLAUDE.md  Dockerfile  LOGGING_IMPROVEMENTS_SUMMARY.md  Makefile  Makefile.old  QUICK_START.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  main.py  pgadmin-pgpass  pgadmin-servers.json  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  seed_db.py
ai-agent-api/alembic/: env.py  script.py.mako
ai-agent-api/alembic/versions/: 20251018_0230_972fc63ffb69_initial_database_schema.py  20251018_0355_567cc0f251e5_add_session_templates_table.py  20251019_0058_c0b7d0e366e7_phase1_claude_sdk_v2_foundation.py  20251024_0322_7d63149cb5f5_.py  20251025_0311_522ded944960_.py  20251025_0500_add_tool_group_to_templates.py
ai-agent-api/app/: __init__.py  celery_app.py
ai-agent-api/app/api/: __init__.py  dependencies.py  exception_handlers.py  middleware.py
ai-agent-api/app/celery_tasks/: __init__.py  task_execution.py
ai-agent-api/app/claude_sdk/: __init__.py  client_manager.py  exceptions.py  hook_handlers.py  message_processor.py  permission_service.py
ai-agent-api/app/core/: config.py  logging.py
ai-agent-api/app/database/: base.py  session.py
ai-agent-api/app/db/: __init__.py  seed.py
ai-agent-api/app/domain/: __init__.py  enums.py  exceptions.py
ai-agent-api/app/infrastructure/: __init__.py  redis_client.py
ai-agent-api/app/mcp/: __init__.py  config_builder.py  config_manager.py  sdk_tools.py
ai-agent-api/app/models/: __init__.py  audit_log.py  hook.py  hook_execution.py  mcp_server.py  message.py  permission_decision.py  report.py  session.py  session_metrics_snapshot.py  session_template.py  task.py  task_execution.py  task_template.py  tool_call.py  tool_group.py  user.py  working_directory.py  working_directory_archive.py
ai-agent-api/app/repositories/: __init__.py  base.py  hook_execution_repository.py  mcp_server_repository.py  message_repository.py  permission_decision_repository.py  report_repository.py  session_metrics_snapshot_repository.py  session_repository.py  session_template_repository.py  task_execution_repository.py  task_repository.py  task_template_repository.py  tool_call_repository.py  tool_group_repository.py  user_repository.py  working_directory_archive_repository.py
ai-agent-api/app/schemas/: __init__.py  admin.py  auth.py  common.py  mappers.py  mcp.py  report.py  session.py  session_template.py  task.py  task_template.py  tool_group.py
ai-agent-api/app/services/: __init__.py  audit_service.py  mcp_server_service.py  report_service.py  sdk_session_service.py  session_service.py  session_template_service.py  storage_manager.py  task_service.py  (+3 more)
ai-agent-api/claude-sdk-scripts/: 01_simple_hello_world.py  02_with_system_prompt.py  03_with_allowed_tools.py
ai-agent-api/docs/: API_DOCUMENTATION.md  API_INVENTORY.md  CLAUDE_SDK_MODULE_ARCHITECTURE.md  COMPLETE_TEST_SUITE_SUMMARY.md  INDEX.md  INTEGRATION_CHANGES_REQUIRED.md  SERVICE_OVERVIEW.md  SESSION_MESSAGE_FLOW.md
ai-agent-api/scripts/: aiagent.py  auth_helper.py  monitor_session.sh  monitor_task_execution.sh  seed_task_templates.py  test_redis_tokens.py  test_tasks_api.sh
ai-agent-api/tests/: conftest.py
ai-agent-cli/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
ai-agent-cli/ai_agent_cli/: __init__.py  cli.py
ai-agent-cli/docs/: CLI_IMPLEMENTATION_SUMMARY.md  DOCUMENTATION_SUMMARY.md  QUICKSTART.md  USAGE_EXAMPLES.md
ai-agent-cli/examples/: mcp_management.sh  session_workflow.sh  task_automation.sh
claude-code-sdk-usage-poc/: 01_basic_hello_world.py  02_interactive_chat.py  03_custom_permissions.py  04_hook_system.py  05_mcp_sdk_servers.py  06_external_mcp_servers.py  07_advanced_streaming.py  08_production_ready.py  CLAUDE.md  README.md  poetry.toml  pyproject.toml  run_all_examples.py  simple_hello_world_example.py
claude-code-sdk-usage-poc/docs/: claude-agent-sdk-technical-overview.md  claude-agent-sdk-user-guide.md
(+385 files in other folders)
