[tool.poetry]
name = "ai-agent-cli"
version = "1.0.0"
description = "CLI tool for interacting with AI-Agent-API-Service via REST API"
authors = ["KubeMind Team"]
readme = "README.md"
packages = [{include = "ai_agent_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
httpx = "^0.26.0"
rich = "^13.7.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^24.1.1"
ruff = "^0.1.15"
mypy = "^1.8.0"

[tool.poetry.scripts]
ai-agent = "ai_agent_cli.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
